--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,10 @@ a {
     text-decoration: none;
 }
 
+img {
+    display: block;
+}
+
 .container {
     max-width: 1158px;
     padding-left: 15px;
@@ -149,6 +153,7 @@ a {
     line-height: 1.07;
     display: flex;
     text-align: center;
+    padding: 188px 0;
 }
 
 .hero-container {
@@ -163,7 +168,7 @@ a {
     letter-spacing: 0.02em;
     text-align: center;
     color: #fff;
-    width: 496px;
+    max-width: 496px;
     padding-top: 188px;
     padding-bottom: 48px;
 
@@ -180,7 +185,12 @@ a {
     background-color: #4D5AE5;
     padding: 16px 32px;
     border-radius: 4px;
-    margin-bottom: 188px;
+    display: block;
+    min-width: 169px;
+    height: 56px;
+    border: none;
+    margin: 0 auto;
+    
 }
 
 .button:hover,
@@ -235,6 +245,7 @@ a {
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2e2f42;
+    margin-bottom: 8px;
 }
 
 .advantages-list-text {
@@ -265,7 +276,7 @@ a {
     text-align: center;
     color: #2e2f42;
     text-transform: capitalize;
-    padding-bottom: 72px;
+    margin-bottom: 72px;
 }
 
 .team-list {
@@ -274,9 +285,15 @@ a {
     padding-bottom: 120px;
 }
 
+.container-list-team {
+    padding: 32px 0;
+    border: 1px solid #e7e9fc;
+}
+
 .team-list-item {
     background-color: #FFFFFF;
     width: calc((100% - 72px) / 4);
+    border-radius: 0px 0px 4px 4px;
 }
 
 .team-list-item-title {
@@ -287,9 +304,9 @@ a {
     letter-spacing: 0.02em;
     color: #2e2f42;
     padding-top: 32px;
-    padding-bottom: 8px;
+    margin-bottom: 8px;
     display: flex;
-    justify-content: center;
+    align-items: center;
 }
 
 .team-list-item-text {
@@ -299,8 +316,8 @@ a {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
-    display: flex;
-    justify-content: center;
+    /* display: flex; */
+    align-items: center;
 }
 
 /* PORTFOLIO */
@@ -315,7 +332,7 @@ a {
     color: #2e2f42;
     text-transform: capitalize;
     padding-top: 162px;
-    padding-bottom: 72px;
+    margin-bottom: 72px;
 }
 
 .portfolio-list {
@@ -325,9 +342,19 @@ a {
     column-gap: 24px;
 }
 
+.container-list-portfolio {
+    padding: 32px 16px;
+    border: 1px solid #e7e9fc;
+    border-top: none;
+    margin-bottom: 8px;
+    /* display: flex; */
+    flex-wrap: wrap;
+    max-width: 360px;
+}
+
 .portfolio-list-item {
-    flex-basis: calc((100% - 96px) / 5);
-    border-bottom: 1px solid #e7e9fc;
+    width: calc((100% - 48px) / 3);
+    /* border-bottom: 1px solid #e7e9fc; */
 }
 
 .portfolio-list-item-title {
@@ -355,6 +382,7 @@ a {
 
 .footer {
     background: #2e2f42;
+    padding: 100px 0;
 }
 
 .footer-container {
@@ -362,9 +390,10 @@ a {
 }
 
 .footer-logo {
-    padding-top: 100px;
-    padding-bottom: 16px;
+    /* padding-top: 100px;
+    padding-bottom: 16px; */
     display: inline-block;
+    margin-bottom: 16px;
 }
 
 .logo-text-footer {
@@ -385,5 +414,5 @@ a {
     letter-spacing: 0.02em;
     color: #f4f4fd;
     width: 264px;
-    padding-bottom: 100px;
+    /* padding-bottom: 100px; */
 }
